--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:dist="http://schemas.android.com/apk/distribution"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.classattendanceapp">
 
+
+
     <dist:module dist:instant="true" />
+
+
+
+    <uses-permission
+        android:name="android.permission.NFC"
+        />
+    <uses-feature
+        android:name="android.hardware.nfc"
+        android:required="false"
+        />
 
     <application
         android:allowBackup="true"
@@ -19,7 +32,20 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+            <intent-filter>
+                <action android:name="android.nfc.action.NDEF_DISCOVERED" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+
+                <data android:mimeType="text/plain" />
+            </intent-filter>
+
+
         </activity>
+
+
+
     </application>
 
 </manifest>
